plugins {
    id 'java'
    id 'maven-publish'
}

group = 'org.collection'
version = '0.1.0'
java {
    sourceCompatibility = JavaVersion.toVersion("25")
    targetCompatibility = JavaVersion.toVersion("25")
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(25))
    }
    withSourcesJar()
}

compileJava.options.encoding = "UTF-8"
compileTestJava.options.encoding = "UTF-8"

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
    repositories {
        mavenLocal()
    }
}

tasks.register('perfTest', Test) {
    description = "Runs only performance tests"
    group = "verification"

    useJUnitPlatform {
        includeTags "perf"
    }

    // Show logs for perf tests
    testLogging {
        showStandardStreams = true
        events "passed", "skipped", "failed"
    }

    // Optional: use same classpath as normal tests
    classpath = sourceSets.test.runtimeClasspath
    testClassesDirs = sourceSets.test.output.classesDirs
}

test {
    useJUnitPlatform() {
        if (project.hasProperty("perf")) {
            includeTags "perf"
        } else {
            excludeTags "perf"
        }
    }
    if (project.hasProperty("perf")) {
        testLogging {
            showStandardStreams = true
            events "passed", "skipped", "failed"
        }
    }
    jvmArgs += "-Xshare:off"
    jvmArgs += '--enable-native-access=ALL-UNNAMED'
    jvmArgs += [
            "-javaagent:${configurations.testRuntimeClasspath.find { it.name.contains('mockito-core') }}"
    ]
}